resources/style/default.css
header {
	padding: 6px 0 6px 55px !important;
	font-size: 16pt;
	font-weight: bold;
	background: #555 url(../img/nexial-128.png) no-repeat 4px 3px;
	background-size: 48px;
	color: #eee;
	text-shadow: -1px -1px 5px black;
	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.75);
}

.headerOption {
	text-shadow: none;
	margin-top: -4px;
}

.nav li {
	color: rgba(255, 255, 255, 0.5) !important;
	padding-right: 10px;
	cursor: pointer;
	font-size: 18px;
}

.nav li:hover {
	color: #fff !important;
	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}

.badge#startInspectInfo {
	right: 0;
	top: -10px;
}

.badge#nowInspectInfo {
	top: -10px;
	right: 0;
}

.badge {
	position: relative;
	top: -8px;
	margin-left: -30px;
	color: #d8d8d8;
	opacity: 0.25;
	font-size: 20px;
	text-shadow: -1px 1px 1px #333;
	caret-color: transparent;
	cursor: pointer;
}

.badge:hover {
	color: #fff;
	text-shadow: 0 0 1px #000;
	opacity: 1;
}

.badge-focus {
	opacity: 1;
}

.container-fluid {
	width: 790px;
	padding: 10px;
	height: 320px;
}

/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
/* .row.content {height: 150px} */
.mt-2 {
	margin-top: 10px !important;
}

#startOption #url {
	margin-right: 5px;
}

/* Set gray background color and 100% height */
.sidenav {
	background-color: #f1f1f1;
	height: 100%;
}

select {
	width: 250px;
	font-size: 11pt;
}

#stopOption {
	display: none;
	margin: 0 auto;
	width: 100%;
	text-align: center;
}

#showData {
	max-height: 360px;
	overflow-y: auto;
	box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
}

@media screen and (min-height: 601px) {
	#showData {
		max-height: min-content;
	}
}

@media screen and (min-width: 801px) {
	.container-fluid {
		width: 99%;
	}
}

/* On small screens, set height to 'auto' for the grid */
@media screen and (max-width: 767px) {
	.row.content {
		height: auto;
	}
}

/* inspection table display */
#inspect_table {
	position: relative; /* table header fix */
	max-height: 400px !important;
	border-collapse: separate;
	width: 100%;
	margin: 0;
	padding: 0;
	font-size: 11pt;
}

#inspect_table thead th {
	position: sticky;
	top: 0; /* Don't forget this, required for the stickiness */
	padding: 7px;
	text-align: center;
	color: #f9f9f9;
	background-color: rgba(83, 83, 83, 0.9) !important;
	text-shadow: 1px 1px 3px #000;
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
	border: 2px solid #777;
	user-select: none;
}

#inspect_table tbody {
	overflow-y: auto; /* Trigger vertical scroll    */
	overflow-x: hidden; /* Hide the horizontal scroll */
}

#inspect_table td {
	padding: 5px;
	border-bottom: solid 1px #ddd;
	border-top: none;
}

#inspect_table > tbody > tr:hover {
	background-image: linear-gradient(
		180deg,
		rgba(255, 255, 255, 0.5) 20px,
		rgba(100, 140, 80, 0.45) 70px,
		rgba(40, 60, 30, 0.5) 85px
	);
	background-color: transparent;
}

#inspect_table > tbody > tr:hover * {
	color: #000 !important;
}

#inspect_table > tbody > tr:hover input,
#inspect_table > tbody > tr:hover select {
	background-color: #fff;
}

#inspect_table > tbody > tr > td:nth-child(1) {
	width: 3%;
	text-align: center;
	padding: 12px 0 0 0;
}

#inspect_table > tbody > tr > td:nth-child(2) {
	width: 40%;
}

#inspect_table > tbody > tr > td:nth-child(3) {
	width: 40%;
	padding: 0 !important;
	vertical-align: top;
}

#inspect_table > tbody > tr > td:nth-child(4) .btn {
	padding: 1px 5px;
	margin: 0 !important;
	width: 30px;
	user-select: none;
}

#inspect_table > tbody > tr > td:nth-child(4) .btn:hover {
	background-color: rgba(20, 40, 20, 0.15);
	color: #fff !important;
	text-shadow: 1px 1px 5px black;
}

#inspect_table .form-control {
	font-size: 11pt;
	padding: 3px !important;
	height: 35px;
}

#inspect_table input.form-control {
	padding: 8px !important;
}

.sub-table {
	width: 90%;
	font-size: 11pt;
	margin: 2px 0 !important;
}

.sub-table > tbody > tr:hover {
	background-color: transparent;
}

.sub-table td,
.sub-table th {
	border: none !important;
	padding: 3px 5px !important;
}

.sub-table .param-idx {
	background-color: rgba(150, 150, 150, 0.25);
	padding: 1px 6px;
	cursor: default;
	border-radius: 15px;
	font-size: 9pt;
	color: #777;
	vertical-align: middle;
}

#inspectFeature,
#showStatus {
	display: none;
}

#showStatus {
	width: 50%;
	text-align: center;
	padding: 60px;
	margin: 0 auto 10px;
	font-weight: bold;
}

.loader {
	margin: -6px 10px;
	/* border: 4px dashed #f0f0f3; */
	border-radius: 50%;
	border-top: 5px solid #3498db;
	width: 30px;
	height: 30px;
	-webkit-animation: spin 2s linear infinite; /* Safari */
	animation: spin 2s linear infinite;
	display: inline-block;
}

/* Safari */
@-webkit-keyframes spin {
	0% {
		-webkit-transform: rotate(0deg);
	}
	100% {
		-webkit-transform: rotate(360deg);
	}
}

@keyframes spin {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

#addNew {
	float: right;
	position: relative;
	top: -22px;
	border-radius: 50%;
	right: -8px;
	display: none;
}

footer {
	background-color: #555;
	color: white;
	padding: 15px;
}

.modal {
	top: 43px !important;
}

#infoModal .modal-dialog {
	max-width: 90% !important;
	margin: 0 auto;
}

.command {
	display: inline-block;
	width: 84%;
}

.command-link {
	display: inline-block;
	padding: 5px 4px;
	color: #333;
	border-radius: 5px;
	font-size: 10pt !important;
	float: right;
	cursor: pointer;
	width: 20px;
	position: relative;
}

.copyicon {
	float: right;
	position: relative;
	cursor: pointer;
	width: 20px;
	right: 1%;
	padding: 3px 4px;
}

.copyParamIcon {
	float: right;
	left: 4%;
	position: relative;
	bottom: 28px;
	cursor: pointer;
	width: 20px;
}
#backArrow {
	cursor: pointer;
}

.selectPrefrencesDiv {
	height: 500px;
	display: none;
	font-size: 14.56px;
}

/* // preference table css */
#preferenceTable {
	position: relative; /* table header fix */
	max-height: 400px !important;
	border-collapse: separate;
	width: 100%;
	margin: 0;
	padding: 0;
	font-size: 11pt;
}

#preferenceTable thead th {
	position: sticky;
	top: 0; /* Don't forget this, required for the stickiness */
	padding: 7px;
	text-align: center;
	color: #f9f9f9;
	background-color: rgba(83, 83, 83, 0.9) !important;
	text-shadow: 1px 1px 3px #000;
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
	border: 2px solid #777;
	user-select: none;
}

#preferenceTable tbody {
	overflow-y: auto; /* Trigger vertical scroll    */
	overflow-x: hidden; /* Hide the horizontal scroll */
}

#preferenceTable td {
	padding: 5px;
	border-bottom: solid 1px #ddd;
	border-top: none;
}

#preferenceTable > tbody > tr:hover {
	background-image: linear-gradient(
		180deg,
		rgba(255, 255, 255, 0.5) 20px,
		rgba(100, 140, 80, 0.45) 70px,
		rgba(40, 60, 30, 0.5) 85px
	);
	background-color: transparent;
}

#preferenceTable > tbody > tr:hover * {
	color: #000 !important;
}

#preferenceTable > tbody > tr:hover input,
#preferenceTable > tbody > tr:hover select {
	background-color: #fff;
}

#preferenceTable > tbody > tr > td:nth-child(1) {
	width: 3%;
	text-align: center;
	padding: 12px 0 0 0;
}

#preferenceTable > tbody > tr > td:nth-child(2) {
	width: 40%;
}

#preferenceTable > tbody > tr > td:nth-child(3) {
	width: 40%;
	padding: 0 !important;
	vertical-align: top;
}

#preferenceTable > tbody > tr > td:nth-child(4) .btn {
	padding: 1px 5px;
	margin: 0 !important;
	width: 30px;
	user-select: none;
}

#preferenceTable > tbody > tr > td:nth-child(4) .btn:hover {
	background-color: rgba(20, 40, 20, 0.15);
	color: #fff !important;
	text-shadow: 1px 1px 5px black;
}

#preferenceTable .form-control {
	font-size: 11pt;
	padding: 3px !important;
	height: 35px;
}

#preferenceTable input.form-control {
	padding: 8px !important;
}

.sub-table {
	width: 90%;
	font-size: 11pt;
	margin: 2px 0 !important;
}

.sub-table > tbody > tr:hover {
	background-color: transparent;
}

.sub-table td,
.sub-table th {
	border: none !important;
	padding: 3px 5px !important;
}

.sub-table .param-idx {
	background-color: rgba(150, 150, 150, 0.25);
	padding: 1px 6px;
	cursor: default;
	border-radius: 15px;
	font-size: 9pt;
	color: #777;
	vertical-align: middle;
}

.selectElement,
.inputBox {
	width: 95% !important;
}

.customPathIcon {
	float: right;
	left: 19%;
	position: relative;
	bottom: 28px;
	cursor: pointer;
	width: 20px;
}

#customLocatorDelete {
	position: relative;
	right: 120px;
}

.copyParamIcon:hover,
.copyicon:hover,
.customPathIcon:hover,
#customLocatorDelete:hover,
.command-link:hover {
	background-color: rgba(20, 40, 20, 0.15);
	color: #fff !important;
	text-shadow: 1px 1px 5px black;
}

.modal-content {
	max-height: 300px;
	overflow-y: auto;
}

/* width */
.modal-content::-webkit-scrollbar {
	width: 3px !important;
}

/* Track */
.modal-content::-webkit-scrollbar-track {
	background: #f1f1f1 !important;
}

/* Handle */
.modal-content::-webkit-scrollbar-thumb {
	background: #888 !important;
}

/* Handle on hover */
.modal-content::-webkit-scrollbar-thumb:hover {
	background: #555 !important;
}

.alignToBottom {
	position: relative;
	top: 150px;
}

